well done now we can get post by id.
